# speech-swift

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  Package.swift  README.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_hi.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_th.md  README_tr.md  README_vi.md  README_zh.md
.codex/skills/: speech-swift-benchmark  speech-swift-review-pr  speech-swift-test
.github/: FUNDING.yml
.github/workflows/: daily-benchmarks.yml  nightly-e2e.yml  release.yml  tests.yml
Examples/: websocket-client.html
Examples/DictateDemo/: Package.swift  (+1 more)
Formula/: speech.rb
docs/: cosyvoice-tts.md  shared-protocols.md  speaker-diarization.md  speech-enhancement.md  tts-model.md
scripts/: benchmark_asr.py  benchmark_diarization.py  benchmark_longform.py  benchmark_qwen3_batch_decode.py  benchmark_separation.py  benchmark_speaker.py  benchmark_tts.py  benchmark_vad.py  build_mlx_metallib.sh  check_demos.sh  convert_deepfilternet3.py  convert_fireredvad.py  convert_forced_aligner.py  convert_g2p_coreml.py  convert_kokoro_coreml.py  convert_open_unmix.py  convert_parakeet.py  convert_personaplex.py  convert_qwen35_chat_coreml.py  convert_qwen35_chat_mlx.py  convert_qwen3_asr.py  convert_qwen3_asr_coreml.py  convert_qwen3_asr_decoder_coreml.py  convert_qwen3_chat_coreml.py  convert_qwen3_tts.py  convert_qwen3_tts_coreml.py  export_moss_mlx.py  monitor_apple_gpu.py  prepare_fleurs_asr_manifest.py  pyproject.toml  render_benchmark_dashboard.py  run_benchmarks.sh  test_e2e_isolated.sh  tune_firered_vad.py
(+776 files in other folders)
